package ThucHanh_Practice.CA4;

public interface ThanhVien {
    void onTinMoi(int index, String tinNoiDung);
    void onCapNhatTin(int index, String tinMoiNoiDung);
}
